# SPICE-Builder

./: .gitignore  BUTTON_LAYOUT_OPTIMIZATION.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  FIXES_SUMMARY.md  ICON_UPDATE_GUIDE.md  README.md  UI_OPTIMIZATION_STATUS.md  WORKBENCH_RESTORE_GUIDE.md  WORKBENCH_STATUS.md  _check.cjs  _clean.cjs  _count.cjs  _count_braces.cjs  _depth.cjs  _depth2.cjs  _depth3.cjs  _diag.cjs  _fix1.cjs  _fix10.cjs  _fix11.cjs  _fix2.cjs  _fix3.cjs  _fix4.cjs  _fix5.cjs  _fix6.cjs  _fix7.cjs  _fix8.cjs  _fix9.cjs  _fix_param.cjs  _frag.cjs  _inject_state.cjs  _inject_steps.cjs  _locate_close.cjs  _patch_div.cjs  _probe.cjs  _probe2.cjs  _probe3.cjs  _probe4.cjs  _probe5.cjs  (+25 more)
datademo/: SDH10N2P1WC-AA_SPICE_Data.xlsx  clean_excel.py  fit_comparison.html
docs/: CSV_FORMAT.md  transferfit-multiplot-gui-mockup.html
figma/: 01_overall.md  02_curve_viz.md  03_fitting.md  04_param_editor.md  README.md
figma/SPICE Model Extraction Tool v2/: README.md  index.html
icon-tools/: README.md  generate-icons.js  package-lock.json  package.json
scripts/: clean_and_export_csv.py  driveby.py  plot_fit_lt.py  plot_fit_lt_5sub.py  plot_fit_results.py  run_demo.py
spicebuilder/: __init__.py
spicebuilder/api/: models.py  routes.py  state.py
spicebuilder/data/: __init__.py  loader_csv.py  loader_sdh.py  simdata.py
spicebuilder/fitting/: __init__.py  engine.py  error_funcs.py  optimizer.py  stage.py
src-tauri/src/: lib.rs
tests/: test_fitting.py  test_loader_csv.py  test_models.py
来自SentaurusTCAD的参考/: garand_ug.txt  mystic_ug.txt  randomspice_ug.txt
(+58 files in other folders)
