[project]
name = "spicebuilder"
version = "0.1.0"
description = "SPICE Model Extraction tool for Si SGT Power MOSFETs (BSIM3 + LTspice)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "pyqt5>=5.15",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "ruff"]

[project.scripts]
spicebuilder = "spicebuilder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spicebuilder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
